# depheck-quick

./: Cargo.toml  README.md
data/: package.json
data/src/: example.js
data/src/nested/: example.js
data/src/nested/nested/: example.js
src/: bench.rs  main.rs  scan_files.rs  tests.rs
