[package]
name = "depcheck-quick"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = "2.32"
regex = "1"
prettydiff = "0.6.1"
jwalk = "0.5"
rayon = "1.5"
daachorse = "1.0.0"

[[bin]]
name = "depcheck-quick"
path = "src/main.rs"
